# rusty-d3d12

./: .gitattributes  Cargo.toml  LICENSE.md  README.md  agility.def  build.rs  pix_wrapper.cpp  rusty-d3d12.code-workspace  wrapper.h
.cargo/: config.toml
D3D12AgilitySDK/include/: dxgiformat.idl
assets/: hm_shaders.hlsl  ic_shaders.hlsl  mesh_shaders_example_ms.hlsl  mesh_shaders_example_ps.hlsl
examples/: dynamic_indexing.rs  dynamic_indexing_sm66.rs  hello_mesh_shaders.rs  hello_texture.rs  hello_triangle.rs  heterogeneous_multiadapter.rs  interprocess_communication.rs  n_body_gravity.rs
generation/: d3d12_wrapper.h  pix_wrapper.cpp  pix_wrapper.h
src/: const_wrappers.rs  enum_wrappers.rs  lib.rs  pix_wrapper.rs  struct_wrappers.rs  utils.rs
src/raw_bindings/: d3d12.rs  mod.rs  pix.rs
tools/: conversion_assist.py
