[package]
name = "rusty-d3d12"
version = "0.2.1"
authors = ["Andrey Pushkar <andrey.s.pushkar@gmail.com>"]
edition = "2018"
description = """Low-level D3D12 bindings for Rust."""
license = "MIT"
keywords = ["d3d", "d3d12", "directx12", "directx", "dxgi"]
categories = ["rendering::graphics-api", "graphics", "game-development", "multimedia", "api-bindings"]
repository = "https://github.com/curldivergence/rusty-d3d12"

[features]
default = []
pix = []
log_ref_counting = []

[build-dependencies]
bindgen = "0.57"
regex = "1"
cc = "1.0"

[dependencies]
winapi = { version = "0.3", features = ["winuser", "debugapi"] }
bitflags = "1.2.1"
log = "0.4.8"
static_assertions = "1.1.0"
widestring = "0.4"
hassle-rs = "0.3"
serde = { version = "1.0", features = ["derive"], optional = true }

# Needed for examples
[dev-dependencies]
winit = "0.24"
widestring = "0.4"
memoffset = "0.5"
hassle-rs = "0.3"
clap = "2.33"
simple_logger = "1.6"
cgmath = { version = "0.17", features = ["swizzle"] }
colorsys = "0.6.3"
tobj = "2.0.4"
rand = "0.8"