[package]
name = "rusty-d3d12"
version = "0.5.0"
authors = ["Andrey Pushkar <andrey.s.pushkar@gmail.com>"]
edition = "2021"
description = """Low-level D3D12 bindings for Rust."""
license = "MIT"
keywords = ["d3d", "d3d12", "directx12", "directx", "dxgi"]
categories = ["rendering::graphics-api", "graphics", "game-development", "multimedia", "api-bindings"]
repository = "https://github.com/curldivergence/rusty-d3d12"
exclude = ["/assets", "/extern"]

[package.metadata.docs.rs]
features = ["log_ref_counting", "pix", "debug_callback"]
targets = ["x86_64-pc-windows-msvc"]

[features]
default = []
log_ref_counting = []
pix = []
devel = ["pix"]
debug_callback = []

[build-dependencies]
bindgen = "0.59"
regex = "1"
cc = "1.0"

[dependencies]
winapi = { version = "0.3", features = ["winuser", "debugapi", "winbase"] }
bitflags = "1.2.1"
log = "0.4.8"
static_assertions = "1.1.0"
widestring = "0.4"
hassle-rs = "0.3"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0"

# Needed for examples
[dev-dependencies]
winit = "0.24"
widestring = "0.4"
memoffset = "0.5"
hassle-rs = "0.3"
clap = "2.33"
simple_logger = "1.6"
cgmath = { version = "0.17", features = ["swizzle"] }
colorsys = "0.6.3"
tobj = "2.0.4"
rand = "0.8"